--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
             {% csrf_token %}
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
             <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-            <div class="form-group"><button class="btn btn-primary btn-block co" type="submit">Log In</button><a class="forgot" href="#">Forgot your email or password?</a><a class="forgot" href="#">Create new acount</a></div>
+            <div class="form-group"><button class="btn btn-primary btn-block co" type="submit">Log In</button><a class="forgot" href="#">Forgot your email or password?</a><a class="forgot" href="{% url 'register'%}">Create new acount</a></div>
         </form>
     </div>
     <script src="{% static 'hope/js/jquery.min.js'%}"></script>
