--- a/templates/register.html
+++ b/templates/register.html
@@ -19,8 +19,8 @@
             {% if flag %}
                 <div id="some_flag" title="Some Flag" style="color: brown;">
                      <p>{{ msg }}</p>
-                 </div>
-                {% endif %}
+                </div>
+            {% endif %}
             <form method="post"action="{% url 'signup' %}">
                 {% csrf_token %}
                 <h2 class="text-center"><strong>Create</strong> an account.</h2>
@@ -35,7 +35,8 @@
                 <div class="form-group"><input class="form-control" type="date" name="dob" placeholder="Date Of Birth"></div>
 
                 <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Sign Up</button>
-        </div>
+            </form>
+        </div>    
     </div>
     <script src="{% static 'pop/js/jquery.min.js'%}"></script>
     <script src="{% static 'pop/bootstrap/js/bootstrap.min.js'%}"></script>
